[tool.poetry]
name = "climbingcrux-model"
version = "0.1.0"
description = ""
authors = ["Michał Kurcewicz <mkurc1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
jupyterlab = "^4.1.2"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
